--- a/Source/style.css
+++ b/Source/style.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300;400;500;600;700&family=Noto+Sans+JP:wght@100;300;400;500;700;900&family=Open+Sans:wght@300;400;600;700;800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300&family=Roboto:wght@100;300;400;500;700;900&family=Volkhov:wght@400;700&display=swap');
+
+
 *{
     padding: 0;
     margin: 0;
@@ -6,6 +9,8 @@
 :root{
     --body-font: 'Poppins';
     --body-font-2: 'Volkhov';
+    --body-font-3: 'noto sans jp';
+    --body-font-4: 'open sans';
     --normal-font-size: 0.93rem;
     --small-font-size: 0.81rem;
     --navBar-color: #212832;
@@ -13,6 +18,14 @@
     --tagline-color: #DF6951;
     --button1: #F1A501;
     --White: #fff;
+    --black: #000;
+    --shadow: #f9f6f6;
+    --text-1: #5E6282;
+    --text-2: #14183E; 
+    --text-3: #1E1D4C; 
+    --text-4: #; 
+    --text-5: #080809; 
+    --demo-color: #686D77;
 
 }
 body{
@@ -38,12 +51,51 @@ body{
     justify-content: space-between;
     align-items: center;
     font-size: 17px;
+    font-family: var(--body-font-3);
+    color: var(--navBar-color);
 }
 .navBar .nav_list a{
     text-decoration: none;
     color: var( --navBar-color);
-    padding-left: 3em;
+    padding-left: 4em;
 }
+.dropdown .drop_btn {
+    border: none;
+    outline: none;
+    color: var(--White);
+    margin: 0;
+    font-weight: 300;
+    font-family: var(--body-font-3);
+    position: relative;
+    top: 6px;
+  }
+  
+  .dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: var(--White);
+    text-align: center;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 99;
+    
+  }
+  
+  .dropdown-content a {
+    float: none;
+    color: var(--black);
+    padding: 12px;
+    text-decoration: none;
+    display: block;
+    text-align: center;
+  }
+  
+  .dropdown-content a:hover {
+    background-color: rgb(253, 241, 241);
+  }
+  
+  .dropdown:hover .dropdown-content {
+    display: block;
+  }
 button{
     width: 102px;
     height: 40px;
@@ -52,6 +104,13 @@ button{
     border-radius: 5px;
     background: transparent;
     cursor: pointer;
+    font-family: var(--body-font-3);
+}
+.btn_0:hover{
+    border: 3px solid  var(--navBar-color);
+    transition: ease-in 0.6s;
+    width: 95px;
+    height: 40px;
 }
 
 /* section 1 */
@@ -65,7 +124,7 @@ button{
 }
 .hero{
     position: relative;
-    top: 90px;
+    top: 50px;
 }
 .tagline{
     font-family: var(--body-font);
@@ -78,14 +137,14 @@ button{
     text-transform: uppercase;
 }
 .heading{
-    font-family: Voar(--body-font-2);
+    font-family: Var(--body-font-2);
     font-style: normal;
-    font-weight: bold;
+    font-weight: 700;
     font-size: 84px;
     line-height: 89px;
     letter-spacing: -0.04em;
     color: var(--firstheading);
-    width: 545px;
+    width: 570px;
 }
 .decore_text{
     background-image: url(asset/Decoretext.svg);
@@ -128,8 +187,8 @@ button{
     line-height: 25px;
 }
 
-/* section 1 ends */
-/* section 2 start */
+/* section 1 styling ends */
+/* section 2 styling start */
 
 .section_2{
     text-align: center;
@@ -159,23 +218,27 @@ button{
     align-items: center;
     flex-direction: row;
     justify-content: space-between;
+    margin-top: 30px;
 }
 .box{
-    width: 190px;
     position: relative;
-}
-.box{
     padding: 50px 0px;
-
+    height: 314px;
+    border-radius: 36px;
+    width: 230px;
+    padding: 20px;
+    z-index: 99;
 }
 .two{
     position: relative;
-    top: -25px;
-    background-image: url(asset/Rectangle\ 157.svg);
-    background-repeat: no-repeat;
-    background-position: bottom;
-    box-shadow: 0px 20px 35px rgba(0, 0, 0, 0.02);
-    z-index: 999;
+    box-shadow: 0px 1.8518518209457397px 6.1481480598449707px 0px #00000003;
+    box-shadow: 0px 8.148148536682129px 9.518518447875977px 0px #00000006;
+    box-shadow: 0px 38.51852035522461px 25.481481552124023px 0px #00000009;
+    height: 314px;
+    border-radius: 36px;
+    width: 230px;
+    z-index: auto;
+    background-color: var(--White);
 }
 .vector{
     padding: 20px 0em;
@@ -183,12 +246,19 @@ button{
 .avatar{
     position: relative;
     top: 40px;
+    left: -100px;
+    z-index: -10;
  }
 .services-text{
     padding-bottom: 20px;
+    font-family: var(--body-font-4);
+}
+p{
+    font-family: var(--body-font);
 }
 
-/*  */
+/* section 2 styling ends*/
+/* section 3 styling start */
 
 .section_3{
     text-align: center;
@@ -208,24 +278,69 @@ button{
     display: flex;
     align-items: center;
     flex-direction: row;
-    justify-content: space-between;
+    text-align: center;
+    justify-content: center;
+    gap: 4em;
     position: relative;
     top: 50px;
- 
+    font-family: var(--body-font-3);
+}
+.card{
+    box-shadow: 0px 21.8518518209457397px 30.1481480598449707px 0px #00000003;
+    box-shadow: 0px 28.148148536682129px 26.518518447875977px 0px #00000006;
+    box-shadow: 0px 40px 33px 10px #00000003;
+    box-shadow: 0px 38.51852035522461px 25.481481552124023px 5px #00000009;
+    border-radius: 24px;
+}
+.italy{
+    position: absolute;
+    height: 140px;
+    width: 314px;
+    bottom: 4px;
+    background-color: var(--White);
+    z-index: 999;
+    border-radius: 0px 0px 24px 24px;
+    margin: auto;
+}
+.london{
+    width: 333px;
+    position: absolute;
+    height: 140px;
+    bottom: 4px;
+    background-color: var(--White);
+    z-index: 999;
+    border-radius: 0px 0px 22px 22px;
+    margin: auto;
+}
+.europe{
+    position: absolute;
+    height: 140px;
+    width: 314px;
+    bottom: 4px;
+    background-color: var(--White);
+    z-index: 999;
+    border-radius: 0px 0px 24px 24px;
+    margin: auto;
+}
+.deals{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 20px;
+}
+.destinations_length{
+    position: relative;
+    top: -15px;
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    padding: 20px;
+    
+
 }
 .cardthree{
     background-image: url(asset/Decore2.svg);
     background-repeat: no-repeat;
     background-position: right;
     background-position-y: 150px;
-}
-.card2{
-    position: relative;
-    height: 140px;
-    width: 315px;
-    bottom: 320px;
-    background-color: var(--White);
-    z-index: 999;
-    border-radius: 0px 0px 24px 24px;
-    margin: auto;
 }
